[gd_scene load_steps=30 format=3 uid="uid://bitpujnxtxp3w"]

[ext_resource type="PackedScene" uid="uid://bgx3rlc5xbaxu" path="res://player/player.tscn" id="1_6ojck"]
[ext_resource type="Script" path="res://level_5.gd" id="1_nd0ga"]
[ext_resource type="PackedScene" uid="uid://qw8f6uvj1m4v" path="res://box.tscn" id="2_inngs"]
[ext_resource type="PackedScene" uid="uid://237wove5frar" path="res://enemy_spawner.tscn" id="3_3qy3f"]
[ext_resource type="PackedScene" uid="uid://cgre4vurhqs34" path="res://enemy.tscn" id="4_l00vg"]
[ext_resource type="PackedScene" uid="uid://dkic8v35tdkk" path="res://speed_pickup.tscn" id="5_fkryd"]
[ext_resource type="Script" path="res://enemylevel21.gd" id="5_h5c35"]
[ext_resource type="PackedScene" uid="uid://g8jqxn4gc4c0" path="res://level_completed.tscn" id="6_tugf1"]
[ext_resource type="PackedScene" uid="uid://bilhyhxgn8vtb" path="res://level_failed.tscn" id="7_1smdb"]
[ext_resource type="PackedScene" uid="uid://6kxukrvgum7s" path="res://wall.tscn" id="8_0u1jh"]
[ext_resource type="PackedScene" uid="uid://bpmfw6yc7cxu5" path="res://goal.tscn" id="9_4tyht"]
[ext_resource type="Script" path="res://kill_ball_3_path_follow_2d.gd" id="12_2ufcy"]
[ext_resource type="Texture2D" uid="uid://fsckpt1wpjlv" path="res://kill_ball_sprite.png" id="13_xdllb"]
[ext_resource type="Script" path="res://kill_ball_4_path_follow_2d.gd" id="14_olyqp"]
[ext_resource type="AudioStream" uid="uid://n1tc6w3qk0ei" path="res://retro-explode-2-236688.mp3" id="15_hn3xd"]
[ext_resource type="AudioStream" uid="uid://c4f4y78cxrkgg" path="res://cute-level-up-3-189853.mp3" id="16_rg8gv"]
[ext_resource type="AudioStream" uid="uid://ff6ohslpt0om" path="res://vinyl-stop-sound-effect-241388.mp3" id="17_le7t2"]

[sub_resource type="Curve2D" id="Curve2D_2afjk"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 411, 140, 0, 0, 0, 0, 291, 141, 0, 0, 0, 0, 174, 153, 0, 0, 0, 0, 125, 196, 0, 0, 0, 0, 114, 262, 0, 0, 0, 0, 117, 339, 0, 0, 0, 0, 122, 417, 0, 0, 0, 0, 168, 500, 0, 0, 0, 0, 291, 518, 0, 0, 0, 0, 406, 521)
}
point_count = 10

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6fmdw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kp1re"]

[sub_resource type="Animation" id="Animation_rg2pq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_y86vj"]
resource_name = "killball_1_movement"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.25, 0.5, 0.75, 1.0, 0.75, 0.5, 0.25, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mwpc7"]
_data = {
"RESET": SubResource("Animation_rg2pq"),
"killball_1_movement": SubResource("Animation_y86vj")
}

[sub_resource type="Curve2D" id="Curve2D_7kpv7"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 415, 244, 0, 0, 0, 0, 325, 242, 0, 0, 0, 0, 254, 257, 0, 0, 0, 0, 234, 303, 0, 0, 0, 0, 254, 370, 0, 0, 0, 0, 324, 393, 0, 0, 0, 0, 405, 403)
}
point_count = 7

[sub_resource type="CircleShape2D" id="CircleShape2D_uu3h3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g56b6"]

[sub_resource type="Animation" id="Animation_fjx05"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_vq0js"]
resource_name = "killball_1_movement"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.25, 0.5, 0.75, 1.0, 0.75, 0.5, 0.25, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6qpl7"]
_data = {
"RESET": SubResource("Animation_fjx05"),
"killball_1_movement": SubResource("Animation_vq0js")
}

[node name="level5" type="Node2D"]
script = ExtResource("1_nd0ga")
small_enemy_value = 10
opponent_escape_value = 50

[node name="player" parent="." instance=ExtResource("1_6ojck")]
position = Vector2(800, 200)

[node name="box" parent="." instance=ExtResource("2_inngs")]
position = Vector2(750, 330)

[node name="box2" parent="." instance=ExtResource("2_inngs")]
position = Vector2(723, 330)

[node name="box3" parent="." instance=ExtResource("2_inngs")]
position = Vector2(696, 330)

[node name="box4" parent="." instance=ExtResource("2_inngs")]
position = Vector2(669, 330)

[node name="box5" parent="." instance=ExtResource("2_inngs")]
position = Vector2(642, 330)

[node name="EnemySpawner" parent="." instance=ExtResource("3_3qy3f")]
z_index = -1
position = Vector2(695, 330)
rotation = 1.5708
scale = Vector2(1, 7)

[node name="enemy" parent="." node_paths=PackedStringArray("opponent", "player") instance=ExtResource("4_l00vg")]
visible = false
position = Vector2(630, 450)
script = ExtResource("5_h5c35")
opponent = NodePath("../player")
player = NodePath("../player")
speed = 1

[node name="enemy2" parent="." node_paths=PackedStringArray("opponent", "player") instance=ExtResource("4_l00vg")]
visible = false
position = Vector2(750, 450)
script = ExtResource("5_h5c35")
opponent = NodePath("../player")
player = NodePath("../player")
speed = 1

[node name="enemy3" parent="." node_paths=PackedStringArray("opponent", "player") instance=ExtResource("4_l00vg")]
visible = false
position = Vector2(690, 520)
script = ExtResource("5_h5c35")
opponent = NodePath("../player")
player = NodePath("../player")
speed = 1

[node name="SpeedPickup" parent="." instance=ExtResource("5_fkryd")]
position = Vector2(500, 200)

[node name="level_completed" parent="." instance=ExtResource("6_tugf1")]
offset_left = 500.0
offset_top = 150.0
offset_right = 741.0
offset_bottom = 251.0

[node name="level_failed" parent="." instance=ExtResource("7_1smdb")]
offset_left = 530.0
offset_top = 150.0
offset_right = 720.0
offset_bottom = 225.0

[node name="wall" parent="." instance=ExtResource("8_0u1jh")]
position = Vector2(1100, 330)
scale = Vector2(1, 33)

[node name="wall4" parent="." instance=ExtResource("8_0u1jh")]
position = Vector2(80, 330)
scale = Vector2(1, 33)

[node name="wall2" parent="." instance=ExtResource("8_0u1jh")]
position = Vector2(590, 65)
rotation = 1.5708
scale = Vector2(1, 65)

[node name="wall5" parent="." instance=ExtResource("8_0u1jh")]
position = Vector2(930, 330)
rotation = 1.5708
scale = Vector2(1, 20)

[node name="wall6" parent="." instance=ExtResource("8_0u1jh")]
position = Vector2(460, 330)
rotation = 1.5708
scale = Vector2(1, 20)

[node name="wall3" parent="." instance=ExtResource("8_0u1jh")]
position = Vector2(590, 600)
rotation = 1.5708
scale = Vector2(1, 65)

[node name="goal" parent="." instance=ExtResource("9_4tyht")]
position = Vector2(1000, 470)

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_2afjk")

[node name="KillBall3PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(411, 140)
rotation = 3.13326
script = ExtResource("12_2ufcy")

[node name="KillBall3" type="CharacterBody2D" parent="Path2D/KillBall3PathFollow2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/KillBall3PathFollow2D/KillBall3"]
shape = SubResource("RectangleShape2D_6fmdw")

[node name="Sprite2D" type="Sprite2D" parent="Path2D/KillBall3PathFollow2D/KillBall3"]
texture_filter = 1
scale = Vector2(0.6, 0.6)
texture = ExtResource("13_xdllb")

[node name="Area2D" type="Area2D" parent="Path2D/KillBall3PathFollow2D/KillBall3"]
scale = Vector2(4, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/KillBall3PathFollow2D/KillBall3/Area2D"]
shape = SubResource("CircleShape2D_kp1re")

[node name="KillBall3AnimationPlayer" type="AnimationPlayer" parent="Path2D/KillBall3PathFollow2D"]
libraries = {
"": SubResource("AnimationLibrary_mwpc7")
}
speed_scale = 0.5

[node name="Path2D2" type="Path2D" parent="."]
curve = SubResource("Curve2D_7kpv7")

[node name="KillBall4PathFollow2D" type="PathFollow2D" parent="Path2D2"]
position = Vector2(415, 244)
rotation = -3.11937
script = ExtResource("14_olyqp")

[node name="KillBall4" type="CharacterBody2D" parent="Path2D2/KillBall4PathFollow2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D2/KillBall4PathFollow2D/KillBall4"]
shape = SubResource("CircleShape2D_uu3h3")

[node name="Sprite2D" type="Sprite2D" parent="Path2D2/KillBall4PathFollow2D/KillBall4"]
texture_filter = 1
scale = Vector2(0.6, 0.6)
texture = ExtResource("13_xdllb")

[node name="Area2D" type="Area2D" parent="Path2D2/KillBall4PathFollow2D/KillBall4"]
scale = Vector2(4, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D2/KillBall4PathFollow2D/KillBall4/Area2D"]
shape = SubResource("CircleShape2D_g56b6")

[node name="KillBall4AnimationPlayer" type="AnimationPlayer" parent="Path2D2/KillBall4PathFollow2D"]
libraries = {
"": SubResource("AnimationLibrary_6qpl7")
}

[node name="score" type="Label" parent="."]
offset_top = 24.0
offset_right = 63.0
offset_bottom = 47.0
text = "Puntos: "

[node name="audio_text" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Sonido(m): Activo"

[node name="small_enemy_death_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_hn3xd")

[node name="level_completed_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_rg8gv")

[node name="level_failed_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_le7t2")

[connection signal="death" from="player" to="." method="_on_player_death"]
[connection signal="spawnerContact" from="player" to="enemy" method="_on_player_spawner_contact"]
[connection signal="spawnerContact" from="player" to="enemy2" method="_on_player_spawner_contact"]
[connection signal="spawnerContact" from="player" to="enemy3" method="_on_player_spawner_contact"]
[connection signal="body_entered" from="EnemySpawner" to="enemy" method="_on_enemy_spawner_body_entered"]
[connection signal="body_entered" from="EnemySpawner" to="enemy2" method="_on_enemy_spawner_body_entered"]
[connection signal="body_entered" from="EnemySpawner" to="enemy3" method="_on_enemy_spawner_body_entered"]
[connection signal="give_score" from="enemy" to="." method="_on_enemy_give_score"]
[connection signal="give_score" from="enemy2" to="." method="_on_enemy_2_give_score"]
[connection signal="give_score" from="enemy3" to="." method="_on_enemy_3_give_score"]
[connection signal="body_entered" from="SpeedPickup" to="player" method="_on_speed_pickup_body_entered"]
[connection signal="body_entered" from="goal" to="." method="_on_goal_body_entered"]
[connection signal="body_entered" from="Path2D/KillBall3PathFollow2D/KillBall3/Area2D" to="player" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Path2D2/KillBall4PathFollow2D/KillBall4/Area2D" to="player" method="_on_area_2d_body_entered"]

[editable path="player"]
[editable path="box"]
[editable path="box2"]
[editable path="box3"]
[editable path="box4"]
[editable path="box5"]
[editable path="EnemySpawner"]
[editable path="enemy"]
[editable path="enemy2"]
[editable path="enemy3"]
[editable path="SpeedPickup"]
[editable path="wall"]
[editable path="wall4"]
[editable path="wall2"]
[editable path="wall5"]
[editable path="wall6"]
[editable path="wall3"]
[editable path="goal"]
